--- a/109590031_HW3-2/109590031_HW3-2/local.properties
+++ b/109590031_HW3-2/109590031_HW3-2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 01 16:36:25 CST 2022
-sdk.dir=C\:\\Users\\LAB1223\\AppData\\Local\\Android\\Sdk
+#Tue Mar 01 17:26:44 CST 2022
+sdk.dir=C\:\\Users\\sigtu\\AppData\\Local\\Android\\Sdk
