--- a/109590031_HW3-1/109590031_HW3-1/local.properties
+++ b/109590031_HW3-1/109590031_HW3-1/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 01 16:00:38 CST 2022
-sdk.dir=C\:\\Users\\LAB1223\\AppData\\Local\\Android\\Sdk
+#Sat Mar 12 15:45:44 CST 2022
+sdk.dir=C\:\\Users\\sigtu\\AppData\\Local\\Android\\Sdk
